Added clickable song entries

--- a/ui/index.html
+++ b/ui/index.html
@@ -37,7 +37,7 @@
               <h3 id="current-song-info" style="display: none"></h3>
               <h3 id="default-current-song" style="display: none">Nothing</h3>
               </div>
-          <h3>Coming up next:</h3>
+          <h3 id="queue-title">Coming up next:</h3>
           <div id="queue" class="list-group" style="display: none">
           </div>
           <div id="default-queue" style="display: none">Nothing currently queued.</div>
